Added short next steps section.

--- a/theend.tex
+++ b/theend.tex
@@ -1,10 +1,10 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % theend.tex - Ian Huston
-% $Id: theend.tex,v 1.8 2009/11/09 19:16:26 ith Exp $
+% $Id: theend.tex,v 1.9 2009/11/09 19:38:46 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
 \renewcommand{\CVSrevision}%
-{\version$Id: theend.tex,v 1.8 2009/11/09 19:16:26 ith Exp $}
+{\version$Id: theend.tex,v 1.9 2009/11/09 19:38:46 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -207,3 +207,15 @@ As expected the amplitude of the second order scalar perturbations is much small
 than that of the first order ones. After the generation of the second order
 perturbations at early times, their evolution is that of a damped harmonic
 oscillator similar to the first order evolution.
+
+
+The numerical calculation described is the first step towards a system capable of
+handling the multi field, non slow roll models for which non-linear contributions
+are important. In Section~\ref{sec:next-res}, the next steps towards this goal were
+outlined. The full single field, non slow roll equation can be treated using the
+method already described. Three more $\theta$ dependent terms are necessary to
+compute the full convolution integral in this case. 
+
+The KG equation for the multi field case introduces further complexity. We plan to
+expand the numerical system to encompass two or three scalar fields. The differences
+between single and multi field models are already apparent for these cases.
