Removed pagebreaks and changed chapter title.

--- a/theend.tex
+++ b/theend.tex
@@ -1,15 +1,15 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % theend.tex - Ian Huston
-% $Id: theend.tex,v 1.9 2009/11/09 19:38:46 ith Exp $
+% $Id: theend.tex,v 1.10 2009/11/09 19:39:54 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
 \renewcommand{\CVSrevision}%
-{\version$Id: theend.tex,v 1.9 2009/11/09 19:38:46 ith Exp $}
+{\version$Id: theend.tex,v 1.10 2009/11/09 19:39:54 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
-\chapter{Final Conclusions}
+\chapter{Summary and Conclusions}
 \label{ch:conclusions}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -35,7 +35,6 @@ these the degree of departure of the perturbations from purely Gaussian statisti
 was considered in the local and equilateral cases.
 
 
-\pagebreak
 
 In Part~\ref{part:dbi} of this thesis, analytic methods were used to constrain
 string theory inspired inflationary models. The Dirac-Born-Infeld scenario was
@@ -130,7 +129,6 @@ If, as expected, the observational limits on $\fnleq$ tighten considerably in th
 future, the possibility of an observable tensor signal from the multi coincident
 brane model could be ruled out.
 
-\pagebreak
 % Numerical
 In Part~\ref{part:numerical}, numerical methods were used to test inflationary
 models up to second order in cosmological perturbation theory. The Klein-Gordon
