Changed to using \lesssim as it does spaces properly

--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.61 2009/11/09 13:23:06 ith Exp $
+% $Id: dbi.tex,v 1.62 2009/11/10 12:02:23 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.61 2009/11/09 13:23:06 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.62 2009/11/10 12:02:23 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -61,7 +61,7 @@ parameters. This limit arises by considering
 the variation of the inflaton field during the era when 
 observable scales cross the Hubble radius, and 
 we find in general that the tensor-scalar ratio must satisfy 
-$r \, \lsim \, 10^{-7}$. This 
+$r \lesssim 10^{-7}$. This 
 is below the projected sensitivity of future Cosmic Microwave Background (CMB) polarization 
 experiments \cite{Baumann:2008aq,vpj}. 
 
@@ -188,8 +188,7 @@ where $\N_\mathrm{end}$ is the total number of e-foldings
 from the epoch of observable inflation until inflation ends.
 
 
-Typically, one expects $30 \, \lsim \, {\Neff} 
-\, \lsim \, 60$, 
+Typically, one expects $30 \lesssim {\Neff} \lesssim 60$, 
 although smaller values may be possible if the slow-roll conditions are 
 violated after observable scales have crossed the horizon. 
 Furthermore, $N \gg 1$ is necessary 
@@ -218,7 +217,7 @@ implies that
 % 
 This change in the inflaton value will correspond 
 to a fraction of the throat volume, 
-$| \Delta V _{6,*}|  < {V_{6,\mathrm{throat}}} \, \lsim \, {V_6} $,
+$| \Delta V _{6,*}|  < {V_{6,\mathrm{throat}}} \lesssim {V_6} $,
 where equality in the second limit arises if
 the bulk volume is negligible. Hence, 
 $| \Delta \varphi_* |$ is bounded such that  
@@ -233,7 +232,7 @@ $| \Delta \varphi_* |$ is bounded such that
 
 The observations of the CMB 
 that directly constrain the primordial tensor perturbations only 
-cover multipole values in the range $2 \le l \, \lsim \, 100$. 
+cover multipole values in the range $2 \le l \lesssim 100$. 
 This is equivalent to no more than ${\Delta \N_{*}} \simeq {4}$ 
 e-foldings of inflationary expansion and, in general,   
 corresponds to a narrow range of inflaton values. 
@@ -318,7 +317,7 @@ ${r} \, {\gsim} \, 10^{-4}$ \cite{Baumann:2008aq,vpj}.
 If CMB  
 observations are able to span the full range of e-foldings such that
 $\Delta \N_* \simeq 4$, this constraint is strengthened to 
-${r_*} \, {\lsim} \, {2 \times 10^{-11}}$.
+${r_*} \lesssim {2 \times 10^{-11}}$.
 
 
 Before concluding this section, we should remark that 
@@ -442,8 +441,8 @@ sufficiently large to be detectable by Planck,
 It then follows from the  
 WMAP5 best-fit value $n_s \simeq 0.968$ and lower limit 
 $\fnleq > -151$ \cite{Komatsu:2008hk} that the gravitational wave amplitude 
-is bounded both from above and below such that $0.001 \, \lsim \, r 
-\, \lsim \, 0.01$. These bounds follow from 
+is bounded both from above and below such that $0.001 \lesssim r 
+\lesssim 0.01$. These bounds follow from 
 current WMAP5 limits on the spectral index and the 
 non-linearity parameter, but do not take into account the 
 field-theoretic upper bound that must be imposed 
@@ -531,7 +530,7 @@ In particular, combining the limits
 (\Delta \N_{*} )^6}  \,,
 \end{equation}
 % 
-and we find that $\mathrm{Vol}(X_5) \, \lsim \, 10^{-7}$ 
+and we find that $\mathrm{Vol}(X_5) \lesssim 10^{-7}$ 
 is required for typical values $1-n_s \simeq 0.05$ and 
 $\Delta \N_* \simeq 4$. 
 This 
@@ -988,7 +987,7 @@ For example, Becker \etal \cite{Becker:2007ui}
 have proposed a model in which inflation is driven by a warped ${\rm D5}$-brane. 
 In this case, the range of allowed values for the inflaton 
 becomes independent of the throat charge, $N$, which weakens the upper bound on 
-the tensor-scalar ratio to $r \lsim 0.04$. (Strictly speaking there is a weak
+the tensor-scalar ratio to $r \lesssim 0.04$. (Strictly speaking there is a weak
 dependence on the charge since $\Delta \varphi \sim N^{-1/4}$.)
 However, in arriving at this bound, it was assumed that 
 backreaction effects of any fluxes in the throat were 
@@ -1127,7 +1126,7 @@ the five-dimensional sub-manifold of the throat has been specified.
 The inferred upper limit on $r$ is surprisingly strong. 
 We find that the standard UV  
 scenario predicts tensor perturbations that are undetectably small, 
-at a level ${r_*} \, {\lsim} \, {10^{-7}}$. 
+at a level ${r_*} \lesssim {10^{-7}}$. 
 
 The current WMAP5 data 
 favours models that generate a red spectral index $n_s<1$
