--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % multibrane.tex - Ian Huston
-% $Id: multibrane.tex,v 1.57 2009/11/05 19:34:28 ith Exp $
+% $Id: multibrane.tex,v 1.58 2009/11/10 12:02:23 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.57 2009/11/05 19:34:28 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.58 2009/11/10 12:02:23 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -1268,7 +1268,7 @@ imposing further restrictions on the parameters of the models
 and, in particular, on the functional form of the inflaton potential. 
 However, if the ratio $\varepsilon_H/P_{,X}$ remains approximately 
 constant during the final stages of inflation, one would anticipate that 
-$\Neff \lsim 60$. Nevertheless, if $N \ll 75852$, the bound 
+$\Neff \lesssim 60$. Nevertheless, if $N \ll 75852$, the bound 
 \eqref{eq:LHstrongerads} will only be violated for $n \le 3$ if 
 $\Neff \gg 60$.  
 
