Added final remarks.

--- a/theend.tex
+++ b/theend.tex
@@ -1,10 +1,10 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % theend.tex - Ian Huston
-% $Id: theend.tex,v 1.10 2009/11/09 19:39:54 ith Exp $
+% $Id: theend.tex,v 1.11 2009/11/10 12:02:30 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
 \renewcommand{\CVSrevision}%
-{\version$Id: theend.tex,v 1.10 2009/11/09 19:39:54 ith Exp $}
+{\version$Id: theend.tex,v 1.11 2009/11/10 12:02:30 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -217,3 +217,13 @@ compute the full convolution integral in this case.
 The KG equation for the multi field case introduces further complexity. We plan to
 expand the numerical system to encompass two or three scalar fields. The differences
 between single and multi field models are already apparent for these cases.
+
+% Finish next steps
+
+
+To conclude, it is worth reiterating the opening remarks. Cosmology has moved from
+being a theorists' playground to an observational crucible. Inflationary models can
+now be strongly tested by observations and the next generation of experiments will
+place even tighter limits on the viable parameter space. In this thesis analytic
+arguments have constrained string theory inspired inflationary models and numerical
+methods have paved the way to calculating higher order cosmological perturbations.
