Add command for bold font in maths mode.

--- a/ihmacros.sty
+++ b/ihmacros.sty
@@ -1,6 +1,6 @@
 % % % % % % % % % % % % % % % % % 
 % ihmacros.sty - Ian Huston
-% $Id: ihmacros.sty,v 1.25 2009/11/05 22:21:17 ith Exp $
+% $Id: ihmacros.sty,v 1.26 2009/11/12 23:42:49 ith Exp $
 % % % % % % % % % % % % % % % % % 
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{ihmacros}
@@ -30,6 +30,9 @@
 \newcommand{\F}{\ensuremath{\mathcal{F}}}
 \newcommand{\G}{\ensuremath{\mathcal{G}}}
 \newcommand{\X}{\ensuremath{\mathcal{X}}}
+
+% Bold
+\newcommand{\bm}[1]{\ensuremath{\boldsymbol{#1}}}
 
 % 
 \renewcommand{\d}{\mathrm{d}}
