Tidied up intro section and finished next steps.

--- a/theend.tex
+++ b/theend.tex
@@ -1,10 +1,10 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % theend.tex - Ian Huston
-% $Id: theend.tex,v 1.11 2009/11/10 12:02:30 ith Exp $
+% $Id: theend.tex,v 1.12 2009/11/12 23:43:06 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
 \renewcommand{\CVSrevision}%
-{\version$Id: theend.tex,v 1.11 2009/11/10 12:02:30 ith Exp $}
+{\version$Id: theend.tex,v 1.12 2009/11/12 23:43:06 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -22,22 +22,27 @@ and confront the predictions of models with observational data from the non-line
 regime. In this thesis both analytic and numerical methods have been used to
 constrain inflationary models.
 
-The framework used was the Friedmann-Robertson-Walker universe, which was reviewed
-in Chapter~\ref{ch:introduction}. During the accelerated expansion of the
+The framework used in this thesis is the Friedmann-Robertson-Walker universe,
+reviewed in Chapter~\ref{ch:introduction}. During the accelerated expansion of the
 inflationary period, quantum fluctuations seeded energy density variations which
-gave rise to the diverse structure in the universe. First order perturbation theory
-was introduced to describe these fluctuations. Using the Bunch-Davies vacuum initial
-conditions, observational predictions for the inflationary scenario were made.
+gave rise to the diverse structure in the universe. First order
+cosmological perturbation theory
+is necessary to describe the evolution of these fluctuations. The main observable
+quantities can be calculated at horizon crossing by using the Bunch-Davies vacuum
+initial conditions. The departure of the perturbations from a purely Gaussian random
+field is parametrised by $\fnl$ which is described in two limits, local and
+equilateral. 
+In addition to canonical actions, we also introduced
+non-canonical models, for which the speed of sound of the perturbations plays a
+crucial role. When the sound speed is small, the amplitude of $\fnleq$ for these
+models is large. 
 
-The main observable quantities are the power spectrum of scalar perturbations, its
-spectral index, and the ratio of tensor to scalar perturbations. In addition to
-these the degree of departure of the perturbations from purely Gaussian statistics
-was considered in the local and equilateral cases.
 
 
-
-In Part~\ref{part:dbi} of this thesis, analytic methods were used to constrain
-string theory inspired inflationary models. The Dirac-Born-Infeld scenario was
+% DBI
+In Part~\ref{part:dbi}, analytic methods were used to constrain
+string theory inspired non-canonical inflationary models. The Dirac-Born-Infeld
+scenario was
 outlined in Chapter~\ref{ch:dbi-intro}. In this model, a D3-brane propagates in a
 six-dimensional warped throat. The radial position of the brane from the tip of the
 throat assumes the role of the inflaton field. The non-canonical nature of the DBI
@@ -216,14 +221,15 @@ compute the full convolution integral in this case.
 
 The KG equation for the multi field case introduces further complexity. We plan to
 expand the numerical system to encompass two or three scalar fields. The differences
-between single and multi field models are already apparent for these cases.
-
-% Finish next steps
+between single and multi field models are already apparent for these cases. We have
+presented the slow roll source term equation for multiple fields in vector notation.
+The definitions of the four $\theta$ dependent terms used in the single
+field slow roll model can be extended to the multi field case. 
 
 
 To conclude, it is worth reiterating the opening remarks. Cosmology has moved from
 being a theorists' playground to an observational crucible. Inflationary models can
 now be strongly tested by observations and the next generation of experiments will
-place even tighter limits on the viable parameter space. In this thesis analytic
+place even tighter limits on the viable parameter space. In this thesis, analytic
 arguments have constrained string theory inspired inflationary models and numerical
 methods have paved the way to calculating higher order cosmological perturbations.
